<resources>
    <string name="app_name">ChatListAssignment</string>
    <string name="dummy_name">Dummy Name</string>
    <string name="dummy_number">9876543210</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="contact_number">Contact Number</string>
    <string name="select_birthday">Select Birthday</string>
    <string name="select_profile_pic">Select profile pic</string>
    <string name="birthday_selected">Birthday selected is :01/01/2021</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">delete</string>
</resources>