<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/edit_text_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username" />

        <EditText
            android:id="@+id/edit_text_contact_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:digits="+#*1234567890"
            android:hint="@string/contact_number"
            android:inputType="number|textNoSuggestions" />

        <EditText
            android:id="@+id/edit_text_contact_number2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:digits="+#*1234567890"
            android:hint="@string/contact_number"
            android:inputType="number|textNoSuggestions"
            android:visibility="gone" />

        <EditText
            android:id="@+id/edit_text_contact_number3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:digits="+#*1234567890"
            android:hint="@string/contact_number"
            android:inputType="number|textNoSuggestions"
            android:visibility="gone" />

        <TextView
            android:id="@+id/text_view_date_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_200"
            android:text="Select Birthday "
            android:textSize="24sp"
            app:drawableRightCompat="@drawable/ic_baseline_calendar_today_24" />

        <TextView
            android:id="@+id/text_view_birthday"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/birthday_selected"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_select_profile_pic"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/purple_500"
            android:text="@string/select_profile_pic" />

        <ImageView
            android:id="@+id/image_view_profile_pic"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:src="@drawable/ic_baseline_person_24" />


        <Button
            android:id="@+id/button_save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/teal_700"
            android:clickable="false"
            android:gravity="center"
            android:text="@string/save" />
    </LinearLayout>
</ScrollView>

